--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieRating">
+
         <activity
             android:name=".presentation.ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.MovieRating.NoActionBar"
-            android:exported="true">
+            android:exported="true"/>
+
+        <activity android:name=".presentation.ui.RegistrationActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true"/>
+
+            <activity android:name=".presentation.ui.LoginActivity"
+                android:windowSoftInputMode="adjustResize"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
