--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,19 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    def nav_version = "2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    implementation 'com.google.android.material:material:1.4.0'
+
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+
+
+
     //implementation 'com.android.support:multidex:1.0.3'
 
 }
