--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.MovieRating">
 
         <activity
-            android:name=".presentation.ui.TestActivity2"
+            android:name=".presentation.ui.details_fragment.DetailsFragment"
             android:label="@string/app_name"
             android:theme="@style/Theme.MovieRating.NoActionBar"
             android:exported="true"/>
@@ -26,11 +26,11 @@
             android:exported="true"/>
 
         <activity android:name=".presentation.ui.regestration.RegistrationActivity"
-            android:windowSoftInputMode="adjustResize"
+
             android:exported="true"/>
 
             <activity android:name=".presentation.ui.login.LoginActivity"
-                android:windowSoftInputMode="adjustResize"
+
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
