--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.MovieRating">
 
         <activity
-            android:name=".presentation.ui.details_fragment.DetailsFragment"
+            android:name=".presentation.ui.fragments.DetailsFragment"
             android:label="@string/app_name"
             android:theme="@style/Theme.MovieRating.NoActionBar"
             android:exported="true"/>
@@ -21,15 +21,15 @@
             android:windowSoftInputMode="adjustResize"
             android:exported="true"/>
 
-        <activity android:name=".presentation.ui.main.MainActivity"
+        <activity android:name=".presentation.ui.main_activity.MainActivity"
             android:windowSoftInputMode="adjustResize"
             android:exported="true"/>
 
-        <activity android:name=".presentation.ui.regestration.RegistrationActivity"
+        <activity android:name=".presentation.ui.regestration_activity.RegistrationActivity"
 
             android:exported="true"/>
 
-            <activity android:name=".presentation.ui.login.LoginActivity"
+            <activity android:name=".presentation.ui.login_activity.LoginActivity"
 
                 android:exported="true">
             <intent-filter>
