--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MovieRating">
+
 
 
         <activity android:name=".presentation.ui.main_activity.MainActivity"
@@ -20,9 +22,9 @@
 
             android:exported="true"/>
 
-            <activity android:name=".presentation.ui.login_activity.LoginActivity"
+        <activity android:name=".presentation.ui.login_activity.LoginActivity"
 
-                android:exported="true">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
