--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
+  //  id("dagger.hilt.android.plugin")
 }
 
 android {
@@ -59,7 +60,6 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -82,9 +82,6 @@ dependencies {
 
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-
-
-
-    //implementation 'com.android.support:multidex:1.0.3'
-
+   // implementation("com.google.dagger:hilt-android:2.38.1")
+   // kapt("com.google.dagger:hilt-android-compiler:2.38.1")
 }
