--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,36 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.movierating">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".data.hilt.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".data.hilt.MyApplication"
-        android:theme="@style/Theme.MovieRating">
+        android:theme="@style/Theme.MovieRating"
+        android:usesCleartextTraffic="true">
 
 
-        <activity android:name="com.example.movierating.presentation.ui.activitys.mainActivity.MainActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="true"/>
+        <activity
+            android:name="com.example.movierating.presentation.ui.activitys.mainActivity.MainActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
 
-        <activity android:name="com.example.movierating.presentation.ui.activitys.registrationActivity.RegistrationActivity"
-
-            android:exported="true"/>
-
-            <activity android:name="com.example.movierating.presentation.ui.activitys.loginActivity.LoginActivity"
-
-                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name="com.example.movierating.presentation.ui.activitys.registrationActivity.RegistrationActivity"
+
+            android:exported="true" />
+
+        <activity
+            android:name="com.example.movierating.presentation.ui.activitys.loginActivity.LoginActivity"
+
+            android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
 
 
